--- a/tmux.conf
+++ b/tmux.conf
@@ -1,2 +1,53 @@
 set -g prefix C-a
 unbind C-b
+# send prefix key to running application by pressing twice
+bind C-a send-prefix
+
+# set delay when sending commands to minimum
+set -sg escape-time 1
+
+# force reload configuration file
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+# splitting windows
+bind \ split-window -h
+bind - split-window -v
+
+# selecting panes
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# synchronize panes
+bind s setw synchronize-panes
+
+# selecting windows
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
+
+# Resizing pane
+bind -r H resize-pane -L 3
+bind -r J resize-pane -D 3
+bind -r K resize-pane -U 3
+bind -r L resize-pane -R 3
+
+# enable mouse
+# setw -g mode-mouse on
+# set -g mouse-select-pane on
+# set -g mouse-resize-pane on 
+# set -g mouse-select-window on 
+
+
+# status bar styles
+set -g status-left-length 40
+set -g status-left "[#S]:#I.#P "
+set -g status-justify centre
+set -g monitor-activity on
+set -g visual-activity on
+
+# copy mode movements
+setw -g mode-keys vi
+
+# capture pane into clipboard
+bind C capture-pane \; save-buffer tmBuffer.txt \; display-message "Saved pane as tmBuffer.txt!"
