tmux.conf updated

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,9 @@
+# set -g prefix C-n
+#set -g prefix '`'
 set -g prefix C-a
 unbind C-b
 # send prefix key to running application by pressing twice
-bind C-a send-prefix
+bind 'a' send-prefix
 
 # set delay when sending commands to minimum
 set -sg escape-time 1
@@ -10,8 +12,11 @@ set -sg escape-time 1
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # splitting windows
-bind \ split-window -h
-bind - split-window -v
+bind \ split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+
+# new-window
+bind c new-window -c "#{pane_current_path}"
 
 # selecting panes
 bind h select-pane -L
@@ -20,9 +25,14 @@ bind k select-pane -U
 bind l select-pane -R
 
 # synchronize panes
-bind s setw synchronize-panes
+bind e setw synchronize-panes
+
+# sessions
+bind b command-prompt -p "new-session: " "new-session -s %%"
+
 
 # selecting windows
+set -g base-index 1
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
@@ -40,14 +50,36 @@ bind -r L resize-pane -R 3
 
 
 # status bar styles
+# set-option -g status-position top
 set -g status-left-length 40
-set -g status-left "[#S]:#I.#P "
+set -g status-right-length 90
+set -g status-interval 1
+set -g status-left " [#S]:#I.#P "
+#set -g status-right "#(uptime | awk '{print \"Up:\"$3$4}')"
+set -g status-right "#[fg=green]#(uptime | awk -F',' '{print $1\",\"$3}' | sed \"s/ averages//g\") "
+#set -g status-right "#[fg=green]#(/Users/abhishek/Utils/tmuxCurrentSSH.sh)"
 set -g status-justify centre
 set -g monitor-activity on
 set -g visual-activity on
 
+# status bar colors
+#set -g default-terminal "screen-255color"
+#set -g default-terminal "xterm-256color"
+set -g status-fg "#c0c0c0"
+set -g status-bg "#050505"
+
 # copy mode movements
 setw -g mode-keys vi
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+
+# utilities bingind
+#bind a command-prompt -p "ssh: " "send-keys 'ssh %%'"
+bind < send-keys 'ts'
 
 # capture pane into clipboard
 bind C capture-pane \; save-buffer tmBuffer.txt \; display-message "Saved pane as tmBuffer.txt!"
+unbind %
+unbind '"'
+bind % split-window -v\; display-message "duplicating session"\; send-keys '/Users/abhishek/Utils/tmuxCurrentSSH.sh'
+bind '"' split-window -h\; display-message "duplicating session"\; send-keys '/Users/abhishek/Utils/tmuxCurrentSSH.sh'
